# rs-flickyfrog

./: Cargo.toml  README.md
.cargo/: config_fast_builds.toml
src/: app.rs  game.rs  lib.rs  main.rs  player.rs  splash.rs
