[package]
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]
description = "Flicky Frog is a Game."

categories = ["game"]
keywords = ["flicky", "frog", "game"]

edition = "2021"
license = "MIT/Apache-2.0"
name = "flickyfrog"
repository = "https://github.com/nathanfaucett/rs-flickyfrog"
rust-version = "1.74"
version = "0.1.0"

default-run = "flickyfrog"

[lib]
name = "flickyfrog"

[[bin]]
name = "flickyfrog"

[dependencies]
avian2d = "0.1"
bevy = {version = "0.14", features = ["dynamic_linking"]}
rand = {version = "0.8", features = ["getrandom", "small_rng"], default-features = false}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.android]
apk_name = "flickyfrog"
assets = "./assets"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
package = "com.aicacia.flickyfrog"
resources = "./assets/android-res"
strip = "strip"

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Flicky Frog"
